Fiks af væsentligste issues
H1 i darkmode ved note er fikset
H2 "Ingen noter pt" tekst i darkmode er fikset
Prøvede at fikse "logged in as", det ser umiddelbart fint ud nu
Vertikal scrollbar på main fikset
Absolut ingen idé om burgermenu

--- a/hello_app/static/darkmode.css
+++ b/hello_app/static/darkmode.css
@@ -4,7 +4,7 @@
     background-color: #383636;
 }
 
-.dark-mode #frontpageh1 {
+.dark-mode #frontpageh1, .dark-mode #nonotes {
     color: #ffffff;
 }
 
@@ -138,6 +138,10 @@
   background-color: white;
   color: black;
 }
+.dark-mode .markdown-body h1 {
+  color: black;
+}
+
 .dark-mode .view-timestamps {
   color: white;
 }
